--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -3,7 +3,7 @@
   <div class="footer-copyright">
     <div class="container-fluid">Made with
       <i class="fa fa-heart" styl="color: red" aria-hidden="true"></i>
-      © 2017 Copyright:
+      © {{ year }} Copyright:
       <a routerLink="/"> eventpicking.de </a>
     </div>
   </div>
